added file message translations